# MlOps-Databricks-Scaffold

./: .gitignore  Makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup-databricks.sh
.github/workflows/: ci.yml
